    <kbd>rdoc -C</kbd> gives a standard report, <kbd>rdoc -C1</kbd> includes
    method parameters.  Method parameters are considered documented if they're
    marked-up with <tt>+</tt>, <tt><code></tt> or <code><tt></code>.
* Bug fixes
  * Darkfish no longer dots from call-seq allowing <tt>ary.insert(index,
    obj...)</tt> to display correctly.  Patch #6 by KUBO Takehiro.

=== 3.2 / 2010-12-29

* Minor enhancements
  * RDoc generator authors may now suppress updating the output dir (creating
    a created.rid file) by setting RDoc::Options#update_output_dir to false.
  * RDoc::Task has been refactored to ease creating subclasses.
* Bug fixes
  * RDoc's gitignore now ignores .DS_Store files.  Pull Request #3 by Shane
    Becker.

=== 3.1 / 2010-12-28

RDoc has moved to github.  Releases after 3.1 reference github unless
otherwise noted.

* Minor enhancements
  * RDoc::Task now features a #generator option to choose an alternate
    generator.  Pull Request #2 by Erik Hollensbe.
  * Enhanced test for RDoc::Parser::binary?  RubyForge patch #28538 by Eito
    Katagiri.
  * Generator list in --help is no longer static.  Generator description comes
    from the generator's DESCRIPTION constant.
  * Documentation summary is now displayed with dynamic width.
* Bug fixes
  * Strip encoding comment from input to avoid overriding file comment.
    RubyForge Bug #22113 by James Gray.
  * Restore call-seq parsing behavior when the call-seq is the only comment.
    RubyForge Bug #26290 by Sylvain Joyeux.
  * Coverage report no longer crashes for constant aliases.  Pull Request #1
    by Andy Lindeman.
  * RDoc no longer looses ghost methods when followed by certain tokens.
    RubyForge bug #27793 by Aaron Patterson.
  * RDoc no longer crashes in ri if HOME is not set.  Ruby Bug #4202 by
    Shyouhei Urabe.
  * ri no longer crashes with HTML format output.  RubyForge bug #28675 by
    7rans.
  * RDoc::Markup::ToHtml#gen_url now initializes #from_path to ''.